[ADD] <pro>Button: Added block property, Added link type for funcType. [IMP] <pro>Table.Column: Optimize the command buttons of the aggregate column be align in vertical. [FIX] <pro>Button: Fix style issue.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -285,6 +285,12 @@
 
   &-aggregation &-cell {
     vertical-align: top;
+
+    &-command {
+      display: block;
+      margin-left: 0 !important;
+      text-align: inherit;
+    }
   }
 
   &:not(&-bordered) &-thead&-column-resizable {
